# somnia-streamer-ai

./: .env  .gitignore  DVDLogo.py  README.md  ShaiazWalk.py  Somnia.txt  azure_speech.py  ban_msg.py  bot.py  cog_workout.py  globals.py  main.py  obs_interactions.py  obs_websocket.py  openai_manager.py  pyproject.toml  read_text_file.py  somnia.py  streampet.py  twitchApi.py  vtt.py
util/: msgUtil.py  number.py  somnia_msg_util.py  streampet_msg_util.py
